# kconfig

./: AGENTS-LOGGING.md  AGENTS.md  CMakeLists.txt  ENGINE_EXTRAS_SPLIT.md  KARMA-EXTRAS.md  NEW-ENGINE-REFACTOR.md  README.init  README.md  abuild.py  bzbuild.py  kbuild.json
agent/: BOOTSTRAP.md
demo/bootstrap/: CMakeLists.txt  README.md
demo/bootstrap/src/: main.cpp
demo/compile/: CMakeLists.txt  README.md  abuild.py  full-test.sh
demo/compile/cmake/tests/: CMakeLists.txt
demo/compile/src/: main.cpp
demo/compile/src/server/: main.cpp
demo/executable/: CMakeLists.txt  README.md
demo/executable/cmake/tests/: CMakeLists.txt  demo_config_cases.sh
demo/executable/runtime/: defaults.json
demo/executable/src/: main.cpp
src/game/: CMakeLists.txt  game.cpp  game.hpp
src/game/client/: bootstrap.cpp  bootstrap.hpp  cli_options.cpp  cli_options.hpp  client.cpp  client_cli_options.cpp  client_cli_options.hpp  community_server_list.cpp  config_client.cpp  console.cpp  game.cpp  main.cpp  player.cpp  runtime.cpp  runtime.hpp  shot.cpp  world_session.cpp  world_session.hpp
src/game/client/domain/: tank_drive_controller.cpp  tank_drive_controller.hpp
src/game/client/game/: audio.cpp  tank_collision.cpp
src/game/client/net/: client_connection.cpp  client_connection.hpp
src/game/client/net/connection/: core.cpp  outbound.cpp
src/game/client/net/connection/inbound/: dispatch.cpp
src/game/client/net/world_package/: apply.cpp  bridge.cpp  cache.cpp  delta.cpp  internal.hpp  manifest.cpp  primitives.cpp
src/game/client/runtime/: engine_config.cpp  internal.hpp  run.cpp  startup_options.cpp
src/game/client/server/: community_browser_controller.cpp  server_connector.cpp  server_discovery.cpp
src/game/engine/: client_engine.cpp  client_engine.hpp
src/game/net/: protocol.hpp  protocol_codec.cpp  protocol_codec.hpp
src/game/net/backends/enet/: client_backend.cpp  server_backend.cpp
src/game/protos/: messages.proto
src/game/renderer/: renderer.cpp  renderer.hpp
src/game/server/: bootstrap.cpp  bootstrap.hpp  chat.cpp  cli_options.cpp  cli_options.hpp  community_heartbeat.cpp  community_heartbeat.hpp  game.cpp  heartbeat_client.cpp  heartbeat_client.hpp  main.cpp  plugin.cpp  plugin.hpp  runtime.cpp  runtime.hpp  runtime_event_rules.cpp  runtime_event_rules.hpp  server_cli_options.cpp  server_cli_options.hpp  server_discovery.cpp  server_game.cpp  server_game.hpp  world_session.cpp  world_session.hpp
src/game/server/domain/: world_session.cpp  world_session.hpp
src/game/server/net/: enet_event_source.cpp  event_source.cpp  event_source.hpp  transport_event_source.cpp  transport_event_source.hpp
src/game/server/net/transport_event_source/: common.cpp  core.cpp  internal.hpp
src/game/server/runtime/: config.cpp  event_loop.cpp  internal.hpp  join_result_bridge.cpp  run.cpp  signal.cpp
src/game/tests/: client_runtime_cli_contract_test.cpp  client_world_package_safety_integration_test.cpp  community_heartbeat_integration_test.cpp  enet_disconnect_lifecycle_integration_test.cpp  enet_environment_probe_test.cpp  enet_loopback_integration_test.cpp  enet_multiclient_loopback_test.cpp  server_join_runtime_contract_test.cpp  server_net_contract_test.cpp  server_runtime_event_rules_test.cpp  server_session_runtime_contract_test.cpp  tank_drive_controller_test.cpp  transport_disconnect_lifecycle_integration_test.cpp  transport_environment_probe_test.cpp  transport_loopback_integration_test.cpp  transport_multiclient_loopback_test.cpp
src/game/ui/: AGENTS.md  README.md  architecture.md
src/game/ui/config/: AGENTS.md  README.md  architecture.md  input_mapping.cpp  input_mapping.hpp  render_scale.hpp
src/game/ui/console/: AGENTS.md  README.md  architecture.md  console_interface.hpp  console_types.hpp  null_console.hpp  status_banner.hpp
src/game/ui/controllers/: AGENTS.md  README.md  architecture.md  bindings_controller.hpp  console_controller.cpp  console_controller.hpp  hud_controller.cpp  hud_controller.hpp  settings_controller.cpp  settings_controller.hpp
src/game/ui/core/: AGENTS.md  README.md  architecture.md  backend.hpp  backend_factory.cpp  system.cpp  system.hpp  ui_layer_adapter.cpp  ui_layer_adapter.hpp
src/game/ui/fonts/: AGENTS.md  README.md  architecture.md  console_fonts.cpp  console_fonts.hpp
src/game/ui/frontends/: AGENTS.md  README.md  architecture.md
src/game/ui/frontends/imgui/: architecture.md  backend.cpp  backend.hpp
src/game/ui/frontends/imgui/console/: AGENTS.md  README.md  architecture.md
src/game/ui/frontends/imgui/hud/: AGENTS.md  README.md  architecture.md  crosshair.cpp  crosshair.hpp  dialog.cpp  dialog.hpp
src/game/ui/frontends/rmlui/: AGENTS.md  README.md  architecture.md  backend.cpp  backend.hpp  translate.cpp  translate.hpp
src/game/ui/frontends/rmlui/console/: AGENTS.md  README.md  architecture.md  console.cpp  console.hpp  emoji_utils.cpp  emoji_utils.hpp  modal_dialog.cpp  modal_dialog.hpp
src/game/ui/frontends/rmlui/hud/: AGENTS.md  README.md  architecture.md  crosshair.cpp  crosshair.hpp  dialog.cpp
src/game/ui/models/: AGENTS.md  README.md  architecture.md  bindings_model.hpp  console_model.hpp  settings_model.hpp
(+675 files in other folders)
